# trame-aoc

./: .gitignore  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  setup.cfg
bundles/desktop/: README.md  create_exe.bat  create_linux.sh  create_mac.sh  run.py
bundles/docker/: README.md
bundles/docker/scripts/: build_image.sh  run_image.sh
bundles/docker/server/: launcher.json
bundles/docker/server/www/: trame-aoc.html
bundles/docker/setup/: apps.yml  initialize.sh  requirements.txt
examples/jupyter/: show.ipynb
tests/: test_import.py
trame_aoc/: __init__.py
trame_aoc.egg-info/: PKG-INFO  SOURCES.txt
trame_aoc/app/: core.py  js_solutions.py  solutions.py  wasm_solutions.py
trame_aoc/app/solutions/: __init__.py  day1.py  day2.py  main_runner.py
trame_aoc/module/: __init__.py  media.py  wasm.py
trame_aoc/module/serve/wasm/: aoc-2024-wasm.mjs  aoc-2024-wasm.wasm
trame_aoc/widgets/: trame_aoc.py
vue-components/: package-lock.json  package.json  vite.config.js
vue-components/src/components/: CustomWidget.js  SolutionWidget.js  WasmWidget.js  index.js
vue-components/src/components/solutions/: SolutionProviderModel.js  day1.js  day2.js  day3.js  solution.js
wasm-components/: package-lock.json  package.json  vite.config.ts
wasm-components/aoc-cpp/: CMakeLists.txt
wasm-components/aoc-cpp/cpp/: CMakeLists.txt
wasm-components/aoc-cpp/cpp/applications/aoc-web/: CMakeLists.txt
wasm-components/aoc-cpp/cpp/applications/aoc-web/src/: CMakeLists.txt  WasmCallbacks.d.ts  aoc-web.cpp  aoc.ts  library.ts
wasm-components/aoc-cpp/cpp/applications/aoc-web/www/: index.html.in
wasm-components/aoc-cpp/cpp/applications/aoc_cli/: CMakeLists.txt
wasm-components/aoc-cpp/cpp/applications/aoc_cli/src/: CMakeLists.txt
wasm-components/aoc-cpp/cpp/include/: aoc_y2024.hpp  ipuzzle.hpp  puzzle_factory.hpp  types.hpp
wasm-components/aoc-cpp/cpp/src/: day03.cpp  puzzle_factory.cpp  utils.hpp
wasm-components/aoc-cpp/cpp/tests/: test_day01.cpp  test_day02.cpp
wasm-components/cpp/: CMakeLists.txt  cmake_install.cmake  inc.wasm
wasm-components/cpp/src/: day_1.hpp  input_source.hpp  main.cpp  main_definitions_helper.hpp
wasm-components/cpp/src/tools/: back_insert_sort_iterator.hpp  str_number.hpp  time_extensions.hpp
wasm-components/src/components/: index.js
wasm-cpp/cpp/: .clang-format
wasm-cpp/cpp/applications/: CMakeLists.txt
wasm-cpp/cpp/applications/aoc-web/: CMakeLists.txt
wasm-cpp/cpp/applications/aoc-web/src/: CMakeLists.txt  WasmCallbackEmBinding.cxx  WasmCallbacks.cxx  WasmCallbacks.h  post.js
wasm-cpp/cpp/applications/aoc_cli/src/: cli_main.cpp
wasm-cpp/cpp/include/: CMakeLists.txt
wasm-cpp/cpp/src/: CMakeLists.txt  day01.cpp  day02.cpp  iterative_deepening_depth_first_search.cpp  puzzle_common.hpp  puzzle_factory.cpp
wasm-cpp/cpp/tests/: CMakeLists.txt  test_day03.cpp
